--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">My Website</a>
+            <a class="navbar-brand" href="#">Guvi Task</a>
         </div>
     </nav>
     <div class="custom-container container">
