--- a/updateprofile.html
+++ b/updateprofile.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">My Website</a>
+            <a class="navbar-brand" href="#">Guvi Task</a>
         </div>
     </nav>
     <div class="custom-container container">
